              specified -transparent.  Broken in Netpbm 10.37 (December 2006).

              pamrubber: Fix bug: random behavior with -quad when you specify
              both points for source or target and the second one is lower in
              the image than the first.  Always broken (Pamrubber was new in
              Netpbm 10.54 (March 2011)).

              libnetpbm: When validating computable size of width and height,
              allow for adding up to 10 instead of 2, to account for rounding
              up to a multiple of 8 in processing bit maps.

21.09.25 BJH  Release 10.96.00

              pgmtoppm: Eliminate dependency on color dictionary when user
              does not specify any colors by name.

              pamstereogram: Fix crash with -xbegin=0.  Thanks Scott Pakin.
              Introduced in Netpbm 10.94.

21.06.30 BJH  Release 10.95.00

              pamtopng: Fix rejection of all BLACKANDWHITE_ALPHA images with
              message about wrong depth.  Always broken (pamtopng was new in
              Netpbm 10.71 (June 2015)).  Thanks Karol Kosek
              <krkk@krkk.ct8.pl>.

              pamtopng: Fix failure with GRAYSCALE_ALPHA images with maxval
              less than 255.  Always broken (pamtopng was new in Netpbm 10.71
              (June 2015)).  Thanks Karol Kosek <krkk@krkk.ct8.pl>.
              
              pamtopng: Fix: treats all tuple types that start with BLA as
              BLACKANDWHITE.  Always broken (pamtopng was new in Netpbm 10.71
              (June 2015)).

              pamtopng: Fix -transparent option - program recognized
              -transparency instead.  Always broken (pamtopng was new in
              Netpbm 10.71 (June 2015)).

              pamtogif: Fix failure with bogus message about wrong depth with
              grayscale and black and white PAM images with transparency.
              Always broken (pamtogif was new in Netpbm 10.37 (December 2006)).